--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -37,3 +37,13 @@
   font-weight: 100 900;
   font-stretch: 50% 200%;
 }
+
+h1,
+h2,
+h3 {
+  font-family: var(--fuente-parrafo);
+}
+
+p {
+  font-family: var(--fuente-parrafo);
+}
